--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "@gsap/react": "^2.1.0",
     "@react-three/drei": "^9.97.0",
     "@react-three/fiber": "^8.15.16",
-    "@studio-freight/lenis": "^1.0.34",
-    "@types/node": "^20.11.16",
-    "@types/react": "^18.2.52",
-    "@types/react-dom": "^18.2.18",
-    "autoprefixer": "^10.4.17",
-    "framer-motion": "^11.0.3",
-    "gsap": "^3.12.5",
-    "next": "14.1.0",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.5.0",
+    "@studio-freight/lenis": "^1.0.27",
+    "@types/node": "20.8.10",
+    "@types/react": "18.2.33",
+    "@types/react-dom": "18.2.14",
+    "autoprefixer": "10.4.16",
+    "framer-motion": "^10.16.4",
+    "gsap": "^3.12.2",
+    "next": "14.0.1",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "split-type": "^0.3.4",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "3.3.5",
     "three": "^0.161.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.2.2"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
