Update deployment configurations for GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,16 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          npm install
+          npm install sharp
 
       - name: Build
-        run: npm run build
+        env:
+          NEXT_PUBLIC_BASE_PATH: /Portfolio
+        run: |
+          npm run build
+          touch out/.nojekyll
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -39,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './out'
+          path: out
 
       - name: Deploy to GitHub Pages
         id: deployment
