Fix development configuration and dependencies - Update package.json with correct React types - Remove static export config from next.config.js - Fix RobotCompanion component TypeScript issues

--- a/package.json
+++ b/package.json
@@ -1,41 +1,1 @@
-{
-  "name": "portfolio-website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@gsap/react": "^2.1.0",
-    "@react-three/drei": "^9.97.0",
-    "@react-three/fiber": "^8.15.16",
-    "@studio-freight/lenis": "^1.0.27",
-    "@types/node": "20.8.10",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "autoprefixer": "10.4.16",
-    "framer-motion": "^10.16.4",
-    "gsap": "^3.12.2",
-    "next": "14.0.1",
-    "postcss": "8.4.31",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^4.11.0",
-    "split-type": "^0.3.4",
-    "tailwindcss": "3.3.5",
-    "three": "^0.161.0",
-    "typescript": "5.2.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0"
-  },
-  "main": "script.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
-}
+{  "name": "portfolio-website",  "version": "0.1.0",  "private": true,  "scripts": {    "dev": "next dev",    "build": "next build",    "start": "next start",    "lint": "next lint"  },  "dependencies": {    "@gsap/react": "^2.1.0",    "@react-three/drei": "^9.97.0",    "@react-three/fiber": "^8.15.16",    "@studio-freight/lenis": "^1.0.27",    "@types/node": "20.8.10",    "autoprefixer": "10.4.16",    "framer-motion": "^10.16.4",    "gsap": "^3.12.2",    "next": "14.0.1",    "postcss": "8.4.31",    "react": "18.2.0",    "react-dom": "18.2.0",    "react-icons": "^4.11.0",    "split-type": "^0.3.4",    "tailwindcss": "3.3.5",    "three": "^0.161.0",    "typescript": "5.2.2"  },  "devDependencies": {    "@types/react": "18.2.0",    "@types/react-dom": "18.2.0",    "@types/react-icons": "^2.2.7",    "eslint": "^8.56.0",    "eslint-config-next": "14.1.0"  }}
