--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
@@ -29,6 +31,11 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Clean build directory
+        run: |
+          rm -rf out/
+          rm -rf .next/
 
       - name: Build
         run: npm run build
@@ -41,4 +48,7 @@ jobs:
           branch: gh-pages
           folder: out
           clean: true
+          clean-exclude: |
+            .nojekyll
+          force: true
           token: ${{ secrets.GITHUB_TOKEN }} 
